// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Example/Game Game Initial 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-1 {
  margin-left: 20px;
}

.emotion-2:after {
  clear: both;
  display: table;
}

.emotion-3 {
  background: #fff;
  border: 1px solid #999;
  float: left;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin-right: -1px;
  margin-top: -1px;
  padding: 0;
  text-align: center;
  width: 34px;
}

.emotion-3:focus {
  outline: none;
}

.emotion-3:hover {
  background: #ddd;
}

.emotion-4 {
  color: red;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div>
      <div
        className="emotion-2"
      >
        <button
          className="emotion-3"
          onClick={[Function]}
        >
          <span
            className="emotion-4"
          >
            
          </span>
        </button>
        <button
          className="emotion-3"
          onClick={[Function]}
        >
          <span
            className="emotion-4"
          >
            
          </span>
        </button>
        <button
          className="emotion-3"
          onClick={[Function]}
        >
          <span
            className="emotion-4"
          >
            
          </span>
        </button>
      </div>
      <div
        className="emotion-2"
      >
        <button
          className="emotion-3"
          onClick={[Function]}
        >
          <span
            className="emotion-4"
          >
            
          </span>
        </button>
        <button
          className="emotion-3"
          onClick={[Function]}
        >
          <span
            className="emotion-4"
          >
            
          </span>
        </button>
        <button
          className="emotion-3"
          onClick={[Function]}
        >
          <span
            className="emotion-4"
          >
            
          </span>
        </button>
      </div>
      <div
        className="emotion-2"
      >
        <button
          className="emotion-3"
          onClick={[Function]}
        >
          <span
            className="emotion-4"
          >
            
          </span>
        </button>
        <button
          className="emotion-3"
          onClick={[Function]}
        >
          <span
            className="emotion-4"
          >
            
          </span>
        </button>
        <button
          className="emotion-3"
          onClick={[Function]}
        >
          <span
            className="emotion-4"
          >
            
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="emotion-1"
  >
    <div>
      次のプレイヤー X's turn
    </div>
    <ol>
      <li>
        <button
          onClick={[Function]}
        >
          Go to game start
        </button>
      </li>
    </ol>
  </div>
</div>
`;

exports[`Storyshots Example/Game Gmae All Triangle 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-1 {
  margin-left: 20px;
}

.emotion-2:after {
  clear: both;
  display: table;
}

.emotion-3 {
  background: #fff;
  border: 1px solid #999;
  float: left;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin-right: -1px;
  margin-top: -1px;
  padding: 0;
  text-align: center;
  width: 34px;
}

.emotion-3:focus {
  outline: none;
}

.emotion-3:hover {
  background: #ddd;
}

.emotion-4 {
  color: red;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div>
      <div
        className="emotion-2"
      >
        <button
          className="emotion-3"
          onClick={[Function]}
        >
          <span
            className="emotion-4"
          >
            △
          </span>
        </button>
        <button
          className="emotion-3"
          onClick={[Function]}
        >
          <span
            className="emotion-4"
          >
            △
          </span>
        </button>
        <button
          className="emotion-3"
          onClick={[Function]}
        >
          <span
            className="emotion-4"
          >
            △
          </span>
        </button>
      </div>
      <div
        className="emotion-2"
      >
        <button
          className="emotion-3"
          onClick={[Function]}
        >
          <span
            className="emotion-4"
          >
            △
          </span>
        </button>
        <button
          className="emotion-3"
          onClick={[Function]}
        >
          <span
            className="emotion-4"
          >
            △
          </span>
        </button>
        <button
          className="emotion-3"
          onClick={[Function]}
        >
          <span
            className="emotion-4"
          >
            △
          </span>
        </button>
      </div>
      <div
        className="emotion-2"
      >
        <button
          className="emotion-3"
          onClick={[Function]}
        >
          <span
            className="emotion-4"
          >
            △
          </span>
        </button>
        <button
          className="emotion-3"
          onClick={[Function]}
        >
          <span
            className="emotion-4"
          >
            △
          </span>
        </button>
        <button
          className="emotion-3"
          onClick={[Function]}
        >
          <span
            className="emotion-4"
          >
            △
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="emotion-1"
  >
    <div>
      Winner: △
    </div>
    <ol>
      <li>
        <button
          onClick={[Function]}
        >
          Go to game start
        </button>
      </li>
    </ol>
  </div>
</div>
`;
